k3s/01-citus.yaml
apiVersion: v1
kind: Service
metadata:
  name: citus-coordinator
  namespace: bigintensive
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: citus-coordinator
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: citus-coordinator
  namespace: bigintensive
spec:
  serviceName: citus-coordinator
  replicas: 1
  selector:
    matchLabels:
      app: citus-coordinator
  template:
    metadata:
      labels:
        app: citus-coordinator
    spec:
      containers:
        - name: postgres
          image: citusdata/citus:12.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: citus-worker-1
  namespace: bigintensive
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: citus-worker-1
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: citus-worker-1
  namespace: bigintensive
spec:
  serviceName: citus-worker-1
  replicas: 1
  selector:
    matchLabels:
      app: citus-worker-1
  template:
    metadata:
      labels:
        app: citus-worker-1
    spec:
      containers:
        - name: postgres
          image: citusdata/citus:12.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: citus-worker-2
  namespace: bigintensive
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: citus-worker-2
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: citus-worker-2
  namespace: bigintensive
spec:
  serviceName: citus-worker-2
  replicas: 1
  selector:
    matchLabels:
      app: citus-worker-2
  template:
    metadata:
      labels:
        app: citus-worker-2
    spec:
      containers:
        - name: postgres
          image: citusdata/citus:12.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
