k3s/04-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: bigintensive
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 5173
      targetPort: 5173
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: bigintensive
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: davidefast/bigintensive-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
          readinessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 20
            periodSeconds: 20
