k3s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bigintensive-web
  namespace: bigintensive
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
    - host: bigintensive.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
    - host: api.bigintensive.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001
    - host: kafka-ui.bigintensive.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
    - host: jupyter.bigintensive.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyter
                port:
                  number: 8888
